--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   </head>
   <body>
     <h1>Oddalien Pottery</h1>
+    <br>
+    <h3><b>Custom Pottery</b></h3>
+    <h3><i>Local Potter in Durham, NH</i></h3>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
