--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
     <h1>Oddalien Pottery</h1>
     <br>
-    <h3><b>Custom Pottery</b></h3>
-    <h3><i>Local Potter in Durham, NH</i></h3>
+    <h6><i>Custom Pottery</i></h6>
+    <h6><i>Local Potter in Durham, NH</i></h6>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
