--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   </ul>
   </head>
   <body>
+    <center>
     <h1>Oddalien Pottery</h1>
-    <br>
+  </center>
     <h6><i>Custom Pottery</i></h6>
     <h6><i>Local Potter in Durham, NH</i></h6>
 
