--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <title>Oddalien Pottery</title>
     <ul class="nav nav-pills">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
+    <a class="nav-link active" href="/">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#">Gallery</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">About Us</a>
   </li>
 </ul>
   </ul>
