--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
   <body>
     <center>
     <h1>Oddalien Pottery</h1>
-    <h1>Gallery</h1>
+    <u><h1>Gallery</h1></u>
     <h6><i>Custom Pottery</i></h6>
     <h6><i>Local Potter in Durham, NH</i></h6>
   </center>
